--- a/requirements.txt
+++ b/requirements.txt
@@ -24,24 +24,23 @@ gspread==5.12.3
 idna==3.6
 MarkupPy==1.14
 mongoengine==0.27.0
-mysqlclient==1.4.2.post1
 oauthlib==3.2.2
 odfpy==1.4.1
 openpyxl==3.1.2
 phonenumbers==8.13.24
 Pillow==9.5.0
+psycopg2-binary==2.9.9
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycryptodome==3.19.0
 PyJWT==2.8.0
-pymongo==3.12.3
+pymongo==3.12.1
 python-dotenv==0.21.1
 python-slugify==8.0.1
 pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
-rest-framework-simplejwt==0.0.2
 route==0.1.4
 rsa==4.9
 Send2Trash==1.8.2
