--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ idna==3.6
 MarkupPy==1.14
 mongoengine==0.27.0
 oauthlib==3.2.2
+mysqlclient==1.4.2.post1
 odfpy==1.4.1
 openpyxl==3.1.2
 phonenumbers==8.13.24
